--- a/simple-metrics-app/ansible-playbooks/templates/deployment.yaml
+++ b/simple-metrics-app/ansible-playbooks/templates/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: app
-          image: simple-metrics-app:1.0
+          image: localhost:5000/simple-metrics-app:1.0
           ports:
           - containerPort: 8080
